[package]
name = "post-incr"
version = "0.1.0"
authors = ["VillSnow <vill.snow@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Just add traits for post increment and decrement."
repository = "https://github.com/VillSnow/post-incr-rs/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
